tests/miniJava/pos/000693_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) System.out.println ( { } ) ; else java = 0 ; } }
