tests/miniJava/neg/000851_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = int [ 0 ] ; } }
